--- a/src/Nethermind/Nethermind.TxPool.Test/Nethermind.TxPool.Test.csproj
+++ b/src/Nethermind/Nethermind.TxPool.Test/Nethermind.TxPool.Test.csproj
@@ -17,6 +17,7 @@
       <ProjectReference Include="..\Nethermind.Blockchain\Nethermind.Blockchain.csproj" />
       <ProjectReference Include="..\Nethermind.Core.Test\Nethermind.Core.Test.csproj" />
       <ProjectReference Include="..\Nethermind.Core\Nethermind.Core.csproj" />
+      <ProjectReference Include="..\Nethermind.Db.Rocks\Nethermind.Db.Rocks.csproj" />
     </ItemGroup>
 
 </Project>
