--- a/src/Nethermind/Nethermind.Verkle/Nethermind.Verkle.csproj
+++ b/src/Nethermind/Nethermind.Verkle/Nethermind.Verkle.csproj
@@ -19,6 +19,7 @@
 <!--      <ProjectReference Include="..\Nethermind.Db\Nethermind.Db.csproj" />-->
       <ProjectReference Include="..\Nethermind.Db\Nethermind.Db.csproj" />
       <ProjectReference Include="..\Nethermind.Serialization.Rlp\Nethermind.Serialization.Rlp.csproj" />
+      <ProjectReference Include="..\Nethermind.Trie\Nethermind.Trie.csproj" />
     </ItemGroup>
 
 </Project>
