--- a/src/Nethermind/Nethermind.Runner/configs/condrieu.cfg
+++ b/src/Nethermind/Nethermind.Runner/configs/condrieu.cfg
@@ -13,6 +13,10 @@
         "DiscoveryPort": 30300,
         "P2PPort": 30300
     },
+    "Sync": {
+        "NetworkingEnabled": false,
+        "SynchronizationEnabled": false
+    },
     "JsonRpc": {
         "Enabled": true,
         "Port": 8545
