--- a/src/Nethermind/Nethermind.JsonRpc.TraceStore.Tests/Nethermind.JsonRpc.TraceStore.Tests.csproj
+++ b/src/Nethermind/Nethermind.JsonRpc.TraceStore.Tests/Nethermind.JsonRpc.TraceStore.Tests.csproj
@@ -8,7 +8,7 @@
     <ItemGroup>
       <PackageReference Include="NUnit" Version="3.13.3" />
       <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221221-03" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
         <PackageReference Include="coverlet.collector" Version="3.2.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
