--- a/src/Nethermind/Nethermind.JsonRpc/Nethermind.JsonRpc.csproj
+++ b/src/Nethermind/Nethermind.JsonRpc/Nethermind.JsonRpc.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="System.IO.Abstractions" Version="19.1.5" />
-    <PackageReference Include="Jint" Version="3.0.0-beta-2046" />
+    <PackageReference Include="System.IO.Abstractions" Version="19.1.1" />
+    <PackageReference Include="Jint" Version="2.11.58" />
 
   </ItemGroup>
   <ItemGroup>
