--- a/src/Nethermind/Nethermind.Runner/configs/condrieu.cfg
+++ b/src/Nethermind/Nethermind.Runner/configs/condrieu.cfg
@@ -1,24 +1,33 @@
 {
     "Init": {
-        "WebSocketsEnabled": false,
-        "StoreReceipts" : true,
-        "EnableUnsecuredDevWallet": true,
-        "IsMining": true,
         "ChainSpecPath": "chainspec/condrieu.json",
-        "BaseDbPath": "nethermind_db/spaceneth",
-        "LogFileName": "spaceneth.logs.txt",
-        "StaticNodesPath": "Data/static-nodes.json"
-    },
-    "Network": {
-        "DiscoveryPort": 30300,
-        "P2PPort": 30300
+        "BaseDbPath": "nethermind_db/condrieu",
+        "LogFileName": "condrieu.logs.txt",
     },
     "Sync": {
-        "NetworkingEnabled": false,
-        "SynchronizationEnabled": false
+        "NetworkingEnabled": true,
+        "SynchronizationEnabled": true
     },
     "JsonRpc": {
         "Enabled": true,
         "Port": 8545
+    },
+    "EthStats": {
+        "Server": "wss://ethstats.net/api"
+    },
+    "Metrics": {
+        "NodeName": "Mainnet"
+    },
+    "JsonRpc": {
+        "Enabled": true,
+        "Timeout": 20000,
+        "Host": "127.0.0.1",
+        "Port": 8545,
+        "AdditionalRpcUrls": [
+        "http://localhost:8551|http;ws|net;eth;subscribe;engine;web3;client"
+        ]
+    },
+    "Merge": {
+        "Enabled": true
     }
 }
