--- a/src/Nethermind/Nethermind.Runner/NLog.config
+++ b/src/Nethermind/Nethermind.Runner/NLog.config
@@ -91,9 +91,9 @@
     -->
 
 
-    <!-- <logger name="Merge.Plugin.Synchronization.*" minlevel="Trace" writeTo="all" final="true" /> -->
+    <logger name="Merge.Plugin.Synchronization.*" minlevel="Trace" writeTo="all" final="true" />
 
-    <!-- <logger name="Synchronization.*" minlevel="Trace" writeTo="all" final="true" /> -->
+    <logger name="Synchronization.*" minlevel="Trace" writeTo="all" final="true" />
 
     <!-- <logger name="Network.*" minlevel="Trace" writeTo="all" final="true" /> -->
 
