--- a/src/Nethermind/Nethermind.Verkle/Nethermind.Verkle.csproj
+++ b/src/Nethermind/Nethermind.Verkle/Nethermind.Verkle.csproj
@@ -7,16 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Nethermind.Verkle.Curve" Version="0.0.4-alpha" />
-      <PackageReference Include="Nethermind.Verkle.Polynomial" Version="0.0.4-alpha" />
-      <PackageReference Include="Nethermind.Verkle.Proofs" Version="0.0.4-alpha" />
-      <PackageReference Include="Nethermind.Verkle.Utils" Version="0.0.4-alpha" />
+      <PackageReference Include="Nethermind.Verkle.Curve" Version="0.0.6-alpha" />
+      <PackageReference Include="Nethermind.Verkle.Polynomial" Version="0.0.6-alpha" />
+      <PackageReference Include="Nethermind.Verkle.Utils" Version="0.0.6-alpha" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Nethermind.Db\Nethermind.Db.csproj" />
       <ProjectReference Include="..\Nethermind.Serialization.Rlp\Nethermind.Serialization.Rlp.csproj" />
       <ProjectReference Include="..\Nethermind.Trie\Nethermind.Trie.csproj" />
+      <ProjectReference Include="..\Nethermind.Verkle.Proofs\Nethermind.Verkle.Proofs.csproj" />
+      <ProjectReference Include="..\Nethermind.Verkle.Utils\Nethermind.Verkle.Utils.csproj" />
     </ItemGroup>
 
 </Project>
