--- a/src/Nethermind/Nethermind.Verkle.Proofs/Nethermind.Verkle.Proofs.csproj
+++ b/src/Nethermind/Nethermind.Verkle.Proofs/Nethermind.Verkle.Proofs.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Nethermind.Verkle.Polynomial" Version="0.0.6-alpha" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Nethermind.Core\Nethermind.Core.csproj" />
+  </ItemGroup>
+
 </Project>
