--- a/src/Nethermind/Nethermind.Verkle.Test/Nethermind.Verkle.Test.csproj
+++ b/src/Nethermind/Nethermind.Verkle.Test/Nethermind.Verkle.Test.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="3.3.0" />
+        <PackageReference Include="FluentAssertions" Version="6.8.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
@@ -19,7 +19,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Nethermind.Db.Rocks\Nethermind.Db.Rocks.csproj" />
-      <ProjectReference Include="..\Nethermind.Verkle\Nethermind.Verkle.csproj" />
+      <ProjectReference Include="..\Nethermind.Verkle.Tree\Nethermind.Verkle.Tree.csproj" />
     </ItemGroup>
 
 </Project>
