add trie stores by path storage

--- a/src/Nethermind/Nethermind.Trie/Nethermind.Trie.csproj
+++ b/src/Nethermind/Nethermind.Trie/Nethermind.Trie.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Nethermind.Serialization.Rlp\Nethermind.Serialization.Rlp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Umbraco.CSharpTest.Net.Collections" />
+  </ItemGroup>
+
 </Project>
