[WIP] add path based storage

--- a/src/Nethermind/Directory.Packages.props
+++ b/src/Nethermind/Directory.Packages.props
@@ -75,6 +75,7 @@
     <PackageVersion Include="System.Runtime.Caching" Version="7.0.0" />
     <PackageVersion Include="System.Security.Cryptography.ProtectedData" Version="7.0.1" />
     <PackageVersion Include="System.Text.Encodings.Web" Version="7.0.0" />
+    <PackageVersion Include="Umbraco.CSharpTest.Net.Collections" Version="15.0.0" />
     <PackageVersion Include="Websocket.Client" Version="4.5.2" />
     <PackageVersion Include="YamlDotNet" Version="13.0.1" />
   </ItemGroup>
