--- a/src/Nethermind/Nethermind.Verkle.Tree/Nethermind.Verkle.Tree.csproj
+++ b/src/Nethermind/Nethermind.Verkle.Tree/Nethermind.Verkle.Tree.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Nethermind.Verkle" Version="0.0.7-alpha" />
+      <PackageReference Include="Nethermind.Verkle"/>
     </ItemGroup>
 
     <ItemGroup>
