--- a/src/Nethermind/Nethermind.Runner/Properties/launchSettings.json
+++ b/src/Nethermind/Nethermind.Runner/Properties/launchSettings.json
@@ -192,6 +192,13 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Kaustinen": {
+      "commandName": "Project",
+      "commandLineArgs": "-c kaustinen --JsonRpc.Enabled=true --JsonRpc.Host=0.0.0.0 --JsonRpc.Port=8545 --JsonRpc.JwtSecretFile=/tmp/jwtsecret --JsonRpc.EngineHost=0.0.0.0 --JsonRpc.EnginePort=8551 --Pruning.Mode=None",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
