--- a/src/Nethermind/Nethermind.Consensus.Bor/Nethermind.Consensus.Bor.csproj
+++ b/src/Nethermind/Nethermind.Consensus.Bor/Nethermind.Consensus.Bor.csproj
@@ -17,6 +17,12 @@
     <ProjectReference Include="..\Nethermind.Init\Nethermind.Init.csproj" />
     <ProjectReference Include="..\Nethermind.Specs\Nethermind.Specs.csproj" />
     <ProjectReference Include="..\Nethermind.Synchronization\Nethermind.Synchronization.csproj" />
+    <ProjectReference Include="..\Nethermind.Serialization.Json\Nethermind.Serialization.Json.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="./BorValidatorSetContract.json" />
+    <EmbeddedResource Include="./BorStateReceiverContract.json"/>
   </ItemGroup>
 
 </Project>
