--- a/src/Nethermind/Nethermind.Evm.Lab/Nethermind.Evm.Lab.csproj
+++ b/src/Nethermind/Nethermind.Evm.Lab/Nethermind.Evm.Lab.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" />
     <PackageReference Include="Terminal.Gui" />
   </ItemGroup>
 
