--- a/src/Nethermind/Nethermind.Verkle.Tree.Test/Nethermind.Verkle.Tree.Test.csproj
+++ b/src/Nethermind/Nethermind.Verkle.Tree.Test/Nethermind.Verkle.Tree.Test.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Nethermind.Core.Test\Nethermind.Core.Test.csproj" />
       <ProjectReference Include="..\Nethermind.Db.Rocks\Nethermind.Db.Rocks.csproj" />
       <ProjectReference Include="..\Nethermind.Verkle.Tree\Nethermind.Verkle.Tree.csproj" />
     </ItemGroup>
