add verkle stateless tree creation from proofs

--- a/src/Nethermind/Nethermind.Verkle.Tree/Nethermind.Verkle.Tree.csproj
+++ b/src/Nethermind/Nethermind.Verkle.Tree/Nethermind.Verkle.Tree.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Nethermind.Verkle.Tree</RootNamespace>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
   <ItemGroup>
