--- a/.github/workflows/linux-arm64.yml
+++ b/.github/workflows/linux-arm64.yml
@@ -19,11 +19,12 @@ jobs:
 
           run: |
             apt-get update && apt-get install -y curl unzip libsnappy-dev libgflags-dev -y
-            curl -sL https://github.com/NethermindEth/nethermind/releases/download/1.19.0-rc/nethermind-1.19.0-rc-d8765075-linux-arm64.zip -o neth.zip
+            curl -sL https://globalcdn.nuget.org/packages/nethermind.crypto.secp256k1.1.0.0.nupkg -o neth.zip
+            #curl -sL https://github.com/NethermindEth/nethermind/releases/download/1.19.0-rc/nethermind-1.19.0-rc-d8765075-linux-arm64.zip -o neth.zip
             mkdir neth
             unzip neth.zip -d neth
-            cd neth
-            ./Nethermind.Runner -c sepolia &
+            ldd neth/runtimes/linux-arm64/native/libsecp256k1.so
+            #./Nethermind.Runner -c sepolia &
             sleep 40s
 
       
