--- a/.github/workflows/linux-arm64.yml
+++ b/.github/workflows/linux-arm64.yml
@@ -15,11 +15,11 @@ jobs:
         id: runcmd
         with:
           arch: aarch64
-          distro: ubuntu_latest
+          distro: ubuntu20.04
 
           run: |
             apt-get update && apt-get install -y curl unzip libsnappy-dev libgflags-dev -y
-            curl -sL https://globalcdn.int.nugettest.org/packages/nethermind.crypto.secp256k1.1.0.0-preview.6.nupkg -o neth.zip
+            curl -sL https://globalcdn.int.nugettest.org/packages/nethermind.crypto.secp256k1.1.0.0-preview.7.nupkg -o neth.zip
             #curl -sL https://github.com/NethermindEth/nethermind/releases/download/1.19.0-rc/nethermind-1.19.0-rc-d8765075-linux-arm64.zip -o neth.zip
             mkdir neth
             unzip neth.zip -d neth
