--- a/src/Nethermind/nuget.config
+++ b/src/Nethermind/nuget.config
@@ -10,7 +10,7 @@
       <package pattern="*" />
     </packageSource>
     <packageSource key="nugettest.org">
-      <package pattern="Nethermind.Crypto.SecpP256k1" />
+      <package pattern="Nethermind.Crypto.SecP256k1" />
     </packageSource>
   </packageSourceMapping>
 </configuration>
