--- a/src/Nethermind/Nethermind.Core/Nethermind.Core.csproj
+++ b/src/Nethermind/Nethermind.Core/Nethermind.Core.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nethermind.Verkle" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FastEnum" />
     <PackageReference Include="Microsoft.Extensions.ObjectPool" />
     <PackageReference Include="Nethermind.Crypto.SecP256k1" />
