--- a/.github/workflows/sync-testnets.yml
+++ b/.github/workflows/sync-testnets.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   chiado:
     name: "Run sync of chiado testnet"
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -111,7 +111,7 @@ jobs:
           
   sepolia:
     name: "Run sync of sepolia testnet"
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
