add rocksdb installation

--- a/.github/workflows/sync-testnets.yml
+++ b/.github/workflows/sync-testnets.yml
@@ -41,14 +41,17 @@ jobs:
       #    echo "Building sedge..."
       #    make compile
       
-      - name: Instal with brew and start
+      - name: Install with brew and start
         run: |
-          export DYLD_FALLBACK_LIBRARY_PATH=$(brew --prefix)/lib
           brew update
+          brew install rocksdb
+          echo $(brew --prefix)
+          export DYLD_FALLBACK_LIBRARY_PATH=$(brew --prefix)/lib
           brew install lz4 snappy zstd
           brew tap nethermindeth/nethermind
           brew install nethermind
           nethermind
+        shell: bash
 
       #- name: Run Sedge
       #  working-directory: sedge
