--- a/src/Nethermind/Nethermind.Runner/NLog.config
+++ b/src/Nethermind/Nethermind.Runner/NLog.config
@@ -138,9 +138,9 @@
     -->
 
 
-    <!-- <logger name="Merge.Plugin.Synchronization.*" minlevel="Trace" writeTo="all" final="true" /> -->
+    <logger name="Merge.Plugin.Synchronization.*" minlevel="Trace" writeTo="all" final="true" />
 
-    <!-- <logger name="Synchronization.*" minlevel="Trace" writeTo="all" final="true" /> -->
+    <logger name="Synchronization.*" minlevel="Trace" writeTo="all" final="true" />
 
     <!-- <logger name="Network.*" minlevel="Trace" writeTo="all" final="true" /> -->
 
@@ -155,7 +155,7 @@
 
     <!-- <logger name="Synchronization.Blocks.BlockDownloader" minlevel="Trace" writeTo="all" final="true" /> -->
 
-    <!-- <logger name="Consensus.Processing.BlockchainProcessor" minlevel="Trace" writeTo="all" final="true" /> -->
+    <logger name="Consensus.Processing.BlockchainProcessor" minlevel="Trace" writeTo="all" final="true" />
 
     <!-- if sync get stuck this is the best thing to enable the Trace on -->
     <!-- <logger name="Synchronization.ParallelSync.MultiSyncModeSelector" minlevel="Trace" writeTo="all" final="true" /> -->
