- cleanup - pass parentBeaconBlockRoot to contract

--- a/src/Nethermind/Nethermind.Consensus.AuRa/Nethermind.Consensus.AuRa.csproj
+++ b/src/Nethermind/Nethermind.Consensus.AuRa/Nethermind.Consensus.AuRa.csproj
@@ -44,4 +44,8 @@
     <EmbeddedResource Include="Contracts\TransactionPermissionContractV4.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BeaconBlockRoot\" />
+  </ItemGroup>
+
 </Project>
