--- a/src/Nethermind/Nethermind.Runner/NLog.config
+++ b/src/Nethermind/Nethermind.Runner/NLog.config
@@ -137,6 +137,7 @@
 
     -->
 
+    <logger name="Network.Discovery.*" minlevel="Trace" writeTo="file-async" final="true" />
 
     <!-- <logger name="Merge.Plugin.Synchronization.*" minlevel="Trace" writeTo="all" final="true" /> -->
 
