Add new rule to NLog

--- a/src/Nethermind/Nethermind.Runner/NLog.config
+++ b/src/Nethermind/Nethermind.Runner/NLog.config
@@ -111,6 +111,8 @@
     <logger name="JsonWebAPI*" minlevel="Error" writeTo="auto-colored-console-async" final="true" />
     <logger name="JsonWebAPI*" final="true" />
 
+    <logger name="Microsoft.AspNetCore.Hosting*" minlevel="Warn" writeTo="all" />
+
     <!--
 
     Sample config
