--- a/.github/workflows/build-nethermind-packages.yml
+++ b/.github/workflows/build-nethermind-packages.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
+          cache: true
           dotnet-version: 7
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -44,16 +45,16 @@ jobs:
           echo "build-timestamp=$build_timestamp" >> $GITHUB_OUTPUT
           echo "commit-hash=${GITHUB_SHA:0:8}" >> $GITHUB_OUTPUT
           scripts/deployment/build-runner.sh $GITHUB_SHA $build_timestamp
-      - name: Build Nethermind.Cli
-        run: nethermind/scripts/deployment/build-cli.sh $GITHUB_SHA ${{ steps.build-runner.outputs.build-timestamp }}
-      - name: Build Nethermind launcher
-        run: nethermind/scripts/deployment/build-launcher.sh
-      - name: Build Nethermind launcher for Linux arm64
-        run: |
-          cd nethermind
-          docker buildx build --platform=linux/arm64 -t tmp-launcher -f Dockerfile.launcher . --load
-          docker run --platform=linux/arm64 -v $PWD:/opt/mount --rm tmp-launcher bash -c "cp /nethermind/nethermind-launcher /opt/mount/"
-          mv nethermind-launcher $GITHUB_WORKSPACE/$PUB_DIR/linux-arm64/nethermind-launcher
+      # - name: Build Nethermind.Cli
+      #   run: nethermind/scripts/deployment/build-cli.sh $GITHUB_SHA ${{ steps.build-runner.outputs.build-timestamp }}
+      # - name: Build Nethermind launcher
+      #   run: nethermind/scripts/deployment/build-launcher.sh
+      # - name: Build Nethermind launcher for Linux arm64
+      #   run: |
+      #     cd nethermind
+      #     docker buildx build --platform=linux/arm64 -t tmp-launcher -f Dockerfile.launcher . --load
+      #     docker run --platform=linux/arm64 -v $PWD:/opt/mount --rm tmp-launcher bash -c "cp /nethermind/nethermind-launcher /opt/mount/"
+      #     mv nethermind-launcher $GITHUB_WORKSPACE/$PUB_DIR/linux-arm64/nethermind-launcher
       - name: Archive packages
         env:
           PACKAGE_PREFIX: nethermind-preview-${{ steps.build-runner.outputs.commit-hash }}
