--- a/.github/workflows/build-nethermind-packages.yml
+++ b/.github/workflows/build-nethermind-packages.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           cache: true
+          cache-dependency-path: nethermind/src/Nethermind/Nethermind.Runner/packages.lock.json
           dotnet-version: 7
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
