--- a/src/Nethermind/Nethermind.Runner/Properties/launchSettings.json
+++ b/src/Nethermind/Nethermind.Runner/Properties/launchSettings.json
@@ -121,9 +121,9 @@
     },
     "Kaustinen": {
       "commandName": "Project",
-      "commandLineArgs": "-c kaustinen --Merge.TerminalTotalDifficulty=0 --JsonRpc.Host=0.0.0.0 --Pruning.Mode=None --JsonRpc.EngineHost=0.0.0.0 --JsonRpc.EnginePort=8551 --Network.DiscoveryPort=30303 --JsonRpc.JwtSecretFile=/tmp/jwtsecret --Init.AutoDump Parity",
+      "commandLineArgs": "-c kaustinen --JsonRpc.Host=0.0.0.0 --Pruning.Mode=None --JsonRpc.EngineHost=0.0.0.0 --JsonRpc.EnginePort=8551 --Network.DiscoveryPort=30303 --JsonRpc.JwtSecretFile=/tmp/jwtsecret --Init.AutoDump Parity",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Release"
       }
     },
     "Docker": {
