--- a/src/Nethermind/Nethermind.Runner/configs/goerli.cfg
+++ b/src/Nethermind/Nethermind.Runner/configs/goerli.cfg
@@ -20,7 +20,9 @@
     "PivotTotalDifficulty": "10790000",
     "FastBlocks": true,
     "UseGethLimitsInFastBlocks": true,
-    "FastSyncCatchUpHeightDelta": "10000000000"
+    "FastSyncCatchUpHeightDelta": "10000000000",
+    "ImportDirectory": "C:/ethereum/Export"
+
   },
   "EthStats": {
     "Server": "wss://stats.goerli.net/api",
@@ -47,7 +49,8 @@
     "Port": 8545,
     "AdditionalRpcUrls": [
       "http://localhost:8551|http;ws|net;eth;subscribe;engine;web3;client"
-    ]
+    ],
+    "EnabledModules": [ "eth", "admin" ]
   },
   "Merge": {
     "Enabled": true
