--- a/src/Nethermind/Nethermind.Runner/configs/holesky.cfg
+++ b/src/Nethermind/Nethermind.Runner/configs/holesky.cfg
@@ -5,11 +5,12 @@
         "BaseDbPath": "nethermind_db/holesky",
         "LogFileName": "holesky.logs.txt"
     },
-    "Sync": {
-        "FastSync": true,
-        "SnapSync": true,
-        "FastBlocks": true
-    },
+  "Sync": {
+    "FastSync": true,
+    "SnapSync": true,
+    "FastBlocks": true,
+    "ImportDirectory": "C:/ethereum/Export"
+  },
     "Metrics": {
         "NodeName": "Holesky"
     },
