--- a/.github/workflows/sync-testnets.yml
+++ b/.github/workflows/sync-testnets.yml
@@ -23,16 +23,16 @@ jobs:
             cl-client: "lighthouse"
             el-client: "nethermind:nethermindeth/nethermind:master"
             agent: ubuntu-latest
-          - network: "chiado"
-            checkpoint-sync-url: "http://139.144.26.89:4000/"
-            cl-client: "lighthouse"
-            el-client: "nethermind:nethermindeth/nethermind:master"
-            agent: sync-agent-80gb
-          - network: "sepolia"
-            checkpoint-sync-url: "https://beaconstate-sepolia.chainsafe.io"
-            cl-client: "lighthouse"
-            el-client: "nethermind:nethermindeth/nethermind:master"
-            agent: sync-agent-80gb
+          #- network: "chiado"
+          #  checkpoint-sync-url: "http://139.144.26.89:4000/"
+          #  cl-client: "lighthouse"
+          #  el-client: "nethermind:nethermindeth/nethermind:master"
+          #  agent: sync-agent-80gb
+          #- network: "sepolia"
+          #  checkpoint-sync-url: "https://beaconstate-sepolia.chainsafe.io"
+          #  cl-client: "lighthouse"
+          #  el-client: "nethermind:nethermindeth/nethermind:master"
+          #  agent: sync-agent-80gb
     name: "Run sync of ${{ matrix.network }} testnet"
     runs-on: ${{ matrix.agent }}
     steps:
@@ -96,6 +96,7 @@ jobs:
           bad_logs["Invalid"]=1
           bad_logs["Exception"]=1
           bad_logs["Corrupted"]=1
+          bad_logs["RockDB"]=1
 
           declare -A good_logs
           good_logs["Synced chain Head"]=0
@@ -112,6 +113,8 @@ jobs:
             for bad_log in "${!bad_logs[@]}"; do
               if [[ "$line" == *"$bad_log"* ]]; then
                 echo "Error: $bad_log found in Docker logs."
+                echo "::set-output name=bad_log::$bad_log"
+                echo "::set-output name=failure_line::$line"
                 exit 1
               fi
             done
@@ -136,5 +139,26 @@ jobs:
               break
             fi
           done
-
           echo "Node is synced."
+          
+      - name: Send Slack Notification on failure
+        if: steps.wait.outcome == 'failure'
+        id: slack
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          payload: |
+            {
+              "text": "SYNC FAILED - Chain: ${{ matrix.network }}\nURL: ${{ github.runs_url }}/${{ github.run_id }}\nFailure Reason: ${{ steps.wait.outputs.bad_log }} found in Docker logs. Line on which it was found: ${{ steps.wait.outputs.failure_line }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "SYNC FAILED - Chain: ${{ matrix.network }}\nURL: ${{ github.runs_url }}/${{ github.run_id }}\nFailure Reason: ${{ steps.wait.outputs.bad_log }} found in Docker logs. Line on which it was found: ${{ steps.wait.outputs.failure_line }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
