--- a/.github/workflows/sync-testnets.yml
+++ b/.github/workflows/sync-testnets.yml
@@ -101,10 +101,12 @@ jobs:
           declare -A good_logs
           good_logs["Synced chain Head"]=0
           good_logs["Processed"]=0
+          good_logs["Waiting for Forkchoice message"]=0
 
           declare -A required_count
           required_count["Synced chain Head"]=20
           required_count["Processed"]=20
+          required_count["Waiting for Forkchoice message"]=20
 
           echo "Starting Docker logs monitoring..."
           docker logs -f sedge-execution-client | while read -r line; do
@@ -121,6 +123,7 @@ jobs:
 
             for good_log in "${!good_logs[@]}"; do
               if [[ "$line" == *"$good_log"* ]]; then
+                echo "Good log found"
                 ((good_logs["$good_log"]++))
               fi
             done
