--- a/.github/workflows/sync-testnets.yml
+++ b/.github/workflows/sync-testnets.yml
@@ -90,23 +90,19 @@ jobs:
         id: wait
         timeout-minutes: 90
         run: |
-          set +e
-
           declare -A bad_logs
           bad_logs["Invalid"]=0
           bad_logs["Exception"]=0
           bad_logs["Corrupted"]=0
-          bad_logs["RocksDB"]=0
+          bad_logs["Waiting for Forkchoice message"]=0
 
           declare -A good_logs
           good_logs["Synced chain Head"]=0
           good_logs["Processed"]=0
-          good_logs["Waiting for Forkchoice message"]=0
 
           declare -A required_count
           required_count["Synced chain Head"]=20
           required_count["Processed"]=20
-          required_count["Waiting for Forkchoice message"]=20
 
           echo "Starting Docker logs monitoring..."
           docker logs -f sedge-execution-client | while read -r line; do
