--- a/.github/workflows/hive-consensus-tests.yml
+++ b/.github/workflows/hive-consensus-tests.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        ref: ${{ inputs.nethermind_repo_ref }}
+        ref: ${{ github.ref }}
 
     - name: Prepare docker tag
       id: prepare_ref
@@ -69,8 +69,8 @@ jobs:
           token: "${{ secrets.REPOSITORY_DISPATCH_TOKEN }}"
           inputs: '{
               "tag": "${{ env.CLEAN_REF }}",
-              "dockerfile": "${{ steps.extract_dockerfile.outputs.dockerfile }}",
-              "build-config": "${{ steps.extract_dockerfile.outputs.build-config }}"
+              "dockerfile": "Dockerfile.chiseled",
+              "build-config": "Release"
            }'
         
     - name: Wait for Docker Build Action to complete
